<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/_mon"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@+id/iv_weather"
        app:layout_constraintEnd_toEndOf="@+id/iv_weather"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/iv_weather"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/ic_cloudy"
        app:layout_constraintBottom_toTopOf="@+id/tv_daily_temp"


        app:layout_constraintEnd_toEndOf="@+id/tv_daily_temp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_daily_temp"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <TextView
        android:id="@+id/tv_daily_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/_75"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_weather" />


</androidx.constraintlayout.widget.ConstraintLayout>